[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/menu.gd" type="Script" id=1]
[ext_resource path="res://objects/noise_backgroind.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/creature.tscn" type="PackedScene" id=3]

[node name="menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 75.0
margin_top = 116.0
margin_right = 202.0
margin_bottom = 236.0

[node name="continue" type="Button" parent="VBoxContainer"]
margin_right = 69.0
margin_bottom = 20.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Continue"

[node name="new_game" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 82.0
margin_bottom = 44.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "New Game"

[node name="exit" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 35.0
margin_bottom = 68.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Exit"

[node name="exit_dialog" type="ConfirmationDialog" parent="."]
margin_right = 200.0
margin_bottom = 70.0
dialog_text = "Exit?"

[node name="restart_dialog" type="ConfirmationDialog" parent="."]
margin_right = 200.0
margin_bottom = 70.0
dialog_text = "When you start new game, your save will be resetted. Do you want to start new game?"

[node name="noise_backgroind" parent="." instance=ExtResource( 2 )]
z_index = -2

[node name="creature" parent="." instance=ExtResource( 3 )]
visible = false
[connection signal="pressed" from="VBoxContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/new_game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
[connection signal="confirmed" from="exit_dialog" to="." method="_on_exit_dialog_confirmed"]
[connection signal="confirmed" from="restart_dialog" to="." method="_on_restart_dialog_confirmed"]
